Added Info Command, Added Minor Functions